--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,8 +1,21 @@
+@import './Header.scss';
+
+@import './Home.scss';
+
+@import './Footer.scss';
+
 body {
-  margin: 0;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 45px;
+  background: #fff;
+  gap: 50px;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    'Montserrat' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
