Ajout page acceuil + page Apropos + Page error fonctionnel

--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 209px;
+  height: 100%;
   background: #000;
 
   .footer__div {
@@ -21,7 +21,7 @@
     .footer__text {
       color: #fff;
       text-align: center;
-      font-family: Montserrat;
+      font-family: 'Montserrat';
       font-size: 24px;
       font-family: normal;
       font-weight: 500;
