--- a/src/style/Apropos.scss
+++ b/src/style/Apropos.scss
@@ -15,7 +15,7 @@
   }
 
   .charte {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -23,14 +23,54 @@
     margin-bottom: 38px;
 
     .charte__element {
-      display: flex;
+      // position: relative;
       width: 1023px;
-      align-items: center;
-      padding: 10px 20px 10px 15px;
-      border-radius: 5px;
       background: #ff6060;
       color: #fff;
-      font-family: Montserrat;
+      border-radius: 5px;
+
+      .charte__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-family: 'Montserrat';
+        font-size: 24px;
+        font-weight: 500;
+        border-radius: 5px;
+        padding: 10px 20px 10px 15px;
+      }
+
+      .arrow {
+        width: 32px;
+        height: 32px;
+        transition: transform 0.5s ease-in-out;
+        cursor: pointer;
+      }
+
+      .expanded {
+        transform: rotate(-180deg);
+      }
+
+      .collapse-text {
+        // position: absolute;
+        width: auto;
+        display: none;
+        padding: 20px;
+        border-radius: 10px 10px 5px 5px;
+        background: #f6f6f6;
+
+        p {
+          margin: 0;
+          color: #ff6060;
+          font-family: 'Montserrat';
+          font-size: 18px;
+          font-weight: 400;
+        }
+      }
+
+      .collapse-text.active {
+        display: block;
+      }
     }
   }
 }
