--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -1,10 +1,10 @@
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 68px;
-  gap: 720px;
+  // gap: 720px;
 
   .header__nav {
     display: flex;
@@ -17,7 +17,7 @@
       width: 136px;
       color: #ff6060;
       text-align: right;
-      font-family: Montserrat;
+      font-family: 'Montserrat';
       font-size: 24px;
       font-style: normal;
       font-weight: 500;
@@ -29,7 +29,7 @@
       width: 116px;
       color: #ff6060;
       text-align: right;
-      font-family: Montserrat;
+      font-family: 'Montserrat';
       font-size: 24px;
       font-style: normal;
       font-weight: 500;
