--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,11 +1,11 @@
 .home {
-  display: inline-flex;
   flex-direction: column;
   align-items: center;
-  width: 1440px;
+  max-width: 1440px;
   padding-top: 45px;
   background: #fff;
   gap: 50px;
+  margin: 0 auto;
 
   .header-image {
     position: absolute;
@@ -22,7 +22,7 @@
     width: 705px;
     height: 68px;
     color: #fff;
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     font-size: 48px;
     font-style: normal;
     font-weight: 500;
@@ -32,14 +32,12 @@
   }
 
   .logements {
-    height: 829px;
     border-radius: 25px;
     background: #f6f6f6;
     padding: 56px 50px 43px 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    overflow: auto;
     gap: 60px;
     margin-bottom: 50px;
 
@@ -64,7 +62,7 @@
       width: 300px;
       height: 52px;
       color: #fff;
-      font-family: Montserrat;
+      font-family: 'Montserrat';
       font-size: 18px;
       font-style: normal;
       font-weight: 500;
