--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,6 +4,14 @@
 
 @import './Footer.scss';
 
+@import './Apropos.scss';
+
+@import './Error.scss';
+
+@import './Logement.scss';
+
+@import './Slideshow.scss';
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 body {
   flex-direction: column;
