--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -32,3 +32,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width: 768px) {
+  body {
+    padding-top: 20px;
+  }
+}
