--- a/src/style/Apropos.scss
+++ b/src/style/Apropos.scss
@@ -5,13 +5,21 @@
   justify-content: center;
   gap: 38px;
 
-  .container__image {
-    width: 1240px;
+  .apropos__header {
+    width: 100%;
+    max-width: 1240px;
     height: 223px;
     border-radius: 25px;
     background: #000;
     mix-blend-mode: darken;
-    object-fit: cover;
+
+    .container__image {
+      width: 100%;
+      height: 100%;
+      border-radius: 25px;
+      object-fit: cover;
+      opacity: 0.5;
+    }
   }
 
   .charte {
@@ -19,57 +27,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-width: 1023px;
     gap: 30px;
     margin-bottom: 38px;
+  }
+}
 
-    .charte__element {
-      // position: relative;
-      width: 1023px;
-      background: #ff6060;
-      color: #fff;
-      border-radius: 5px;
+@media (max-width: 760px) {
+  .home {
+    gap: 19px;
 
-      .charte__header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-family: 'Montserrat';
-        font-size: 24px;
-        font-weight: 500;
-        border-radius: 5px;
-        padding: 10px 20px 10px 15px;
-      }
+    .apropos__header {
+      height: 111px;
+      border-radius: 10px;
+    }
 
-      .arrow {
-        width: 32px;
-        height: 32px;
-        transition: transform 0.5s ease-in-out;
-        cursor: pointer;
-      }
-
-      .expanded {
-        transform: rotate(-180deg);
-      }
-
-      .collapse-text {
-        width: auto;
-        display: none;
-        padding: 20px;
-        border-radius: 10px 10px 5px 5px;
-        background: #f6f6f6;
-
-        p {
-          margin: 0;
-          color: #ff6060;
-          font-family: 'Montserrat';
-          font-size: 18px;
-          font-weight: 400;
-        }
-      }
-
-      .collapse-text.active {
-        display: block;
-      }
+    .charte {
+      gap: 20px;
+      margin-bottom: 19px;
     }
   }
 }
