--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -4,7 +4,6 @@
   align-items: center;
   width: 100%;
   height: 68px;
-  // gap: 720px;
 
   .header__nav {
     display: flex;
@@ -22,7 +21,7 @@
       font-style: normal;
       font-weight: 500;
       line-height: 142%;
-      text-decoration-line: underline;
+      text-decoration: none;
     }
 
     .nav-apropos {
@@ -34,6 +33,40 @@
       font-style: normal;
       font-weight: 500;
       line-height: 142%;
+      text-decoration: none;
+    }
+
+    .active {
+      text-decoration: underline;
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .header {
+    height: 46px;
+    justify-content: center;
+
+    img {
+      width: 145px;
+      height: 46px;
+    }
+
+    .header__nav {
+      justify-content: flex-end;
+      width: 190px;
+      height: 17px;
+      gap: 26px;
+
+      .nav-accueil {
+        width: 55px;
+        font-size: 12px;
+      }
+
+      .nav-apropos {
+        width: 66px;
+        font-size: 12px;
+      }
     }
   }
 }
