--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,4 +1,5 @@
 .home {
+  display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 1440px;
@@ -7,14 +8,23 @@
   gap: 50px;
   margin: 0 auto;
 
-  .header__image {
-    position: absolute;
-    width: 1240px;
-    height: 223px;
+  .home__header {
+    position: relative;
+    width: 100%;
+    max-width: 1240px;
     border-radius: 25px;
     background: #000;
     mix-blend-mode: darken;
+  }
+
+  .header__image {
+    position: absolute;
+    width: 100%;
+    max-width: 1240px;
+    height: 223px;
+    border-radius: 25px;
     object-fit: cover;
+    opacity: 0.5;
   }
 
   .header__text {
@@ -32,43 +42,90 @@
   }
 
   .logements {
-    width: 1240px;
+    width: 100%;
+    max-width: 1240px;
     border-radius: 25px;
     background: #f6f6f6;
-    padding: 56px 50px 43px 50px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 60px;
     margin-bottom: 50px;
 
-    .card {
-      position: relative;
-      width: 30%;
-      height: 340px;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    .card__image {
+    .logements__container {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      max-width: 1240px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 60px;
+      padding: 56px 50px 43px 50px;
+
+      .card {
+        position: relative;
+        width: 340px;
+        height: 340px;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+
+      .card__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .card__title {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        width: 300px;
+        height: 52px;
+        color: #fff;
+        font-family: 'Montserrat';
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 142%;
+        margin: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .home {
+    width: 335px;
+    padding-top: 20px;
+    gap: 27px;
+
+    .home__header {
+      width: 335px;
+      height: 111px;
+
+      .header__image {
+        width: 100%;
+        height: 100%;
+      }
+
+      .header__text {
+        width: 217px;
+        height: 48px;
+        font-size: 24px;
+        line-height: 100%;
+        padding: 31px 102px 32px 16px;
+      }
     }
 
-    .card__title {
-      position: absolute;
-      right: 20px;
-      bottom: 20px;
-      width: 300px;
-      height: 52px;
-      color: #fff;
-      font-family: 'Montserrat';
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 142%;
-      margin: 0;
+    .logements {
+      .logements__container {
+        padding: 0;
+
+        .card {
+          height: 255px;
+        }
+
+        .card__title {
+          right: 19px;
+          bottom: 15px;
+        }
+      }
     }
   }
 }
