--- a/src/style/Slideshow.scss
+++ b/src/style/Slideshow.scss
@@ -1,83 +1,72 @@
-.home {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  max-width: 1240px;
 
-  .container {
+  .pictures {
+    width: 100%;
+    height: 415px;
+    border-radius: 25px;
+    object-fit: cover;
+  }
+
+  .picture__number {
+    position: absolute;
+    bottom: 25px;
+    right: 50%;
     display: flex;
-    flex-direction: column;
-    max-width: 1240px;
-    height: auto;
+    flex-direction: row;
+    color: #fff;
+    text-align: center;
+    font-family: 'Montserrat';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 142%;
+    margin: 0;
+  }
 
-    .slideshow-container {
-      position: relative;
-      width: 1240px;
+  .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 46px;
+    height: 79px;
+    cursor: pointer;
 
-      .pictures {
-        width: 100%;
-        height: 415px;
-        border-radius: 25px;
+    &.left {
+      left: 23px;
+    }
+
+    &.right {
+      right: 23px;
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .slideshow-container {
+    .pictures {
+      width: 100%;
+      max-width: 760px;
+      height: 255px;
+    }
+
+    .arrow {
+      width: 24px;
+      height: 24px;
+
+      &.left {
+        left: 0;
       }
 
-      .arrow {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        cursor: pointer;
-
-        &.left {
-          left: 23px;
-        }
-
-        &.right {
-          right: 23px;
-        }
+      &.right {
+        right: 0;
       }
     }
 
-    .info-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-
-      .location {
-        margin-top: 30px;
-
-        .logement__title {
-          margin: 0;
-          color: #ff6060;
-          font-family: 'Montserrat';
-          font-size: 36px;
-          font-style: normal;
-          font-weight: 500;
-        }
-
-        .logement__location {
-          margin: 0;
-          color: #ff6060;
-          font-family: 'Montserrat';
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 500;
-        }
-
-        .logement__tag {
-          display: flex;
-          flex-direction: row;
-          margin-top: 20px;
-
-          .tag {
-            border-radius: 10px;
-            background: #ff6060;
-            color: #fff;
-            padding: 3px 31px 2px 30px;
-            text-align: center;
-            font-family: 'Montserrat';
-            font-size: 14px;
-            font-style: normal;
-          }
-        }
-      }
+    .picture__number {
+      display: none;
     }
   }
 }
