--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -63,12 +63,18 @@
         height: 340px;
         border-radius: 10px;
         overflow: hidden;
+        background: linear-gradient(
+          180deg,
+          rgba(255, 255, 255, 0) 0%,
+          rgba(0, 0, 0, 0.5) 100%
+        );
       }
 
       .card__image {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        opacity: 0.8;
       }
 
       .card__title {
