--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -33,7 +33,10 @@
     padding: 20px;
     background: #f6f6f6;
     padding: 16px 20px 20px 20px;
-    // animation: closeCollapseAnimation 0.4s ease-in-out 0.2s;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: height 5s;
 
     p {
       margin: 0;
@@ -46,7 +49,8 @@
 
   .collapse-text.active {
     display: block;
-    animation: openCollapseAnimation 0.1s ease-in-out;
+    height: auto;
+    opacity: 1;
   }
 }
 
@@ -63,28 +67,5 @@
         font-size: 12px;
       }
     }
-  }
-}
-
-@keyframes openCollapseAnimation {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-  to {
-    height: auto;
-    opacity: 1;
-  }
-}
-
-@keyframes closeCollapseAnimation {
-  from {
-    height: auto;
-    opacity: 1;
-  }
-
-  to {
-    height: 0;
-    opacity: 0;
   }
 }
