--- a/src/style/Logement.scss
+++ b/src/style/Logement.scss
@@ -139,10 +139,12 @@
 
             .tag {
               width: auto;
+              max-width: 100%;
               height: 18px;
               border-radius: 5px;
-              // padding: 2px 28px 2px 27px;
+              padding: 2px 10px;
               font-size: 10px;
+              white-space: nowrap;
             }
           }
         }
