--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -18,7 +18,7 @@
     .arrow {
       width: 32px;
       height: 32px;
-      transition: transform 0.1s ease-in-out;
+      transition: transform 0.5s ease-in-out;
     }
   }
 
@@ -30,14 +30,12 @@
 
   .collapse-text {
     width: auto;
-    overflow: hidden;
-    padding: 20px;
     background: #f6f6f6;
     padding: 16px 20px 20px 20px;
-    max-height: 0;
     overflow: hidden;
-    opacity: 0;
-    transition: max-height 0.5s ease-in-out;
+    height: 0;
+    visibility: hidden;
+    transition: height 0.5s ease-in-out, visibility 0.5s ease-in-out;
 
     p {
       margin: 0;
@@ -49,10 +47,9 @@
   }
 
   &[open] .collapse-text {
-    display: flex;
-    max-height: 500px;
-    opacity: 1;
-    transition: max-height 0.5s ease-in-out;
+    height: 100%;
+    visibility: visible;
+    transition: height 0.5s ease-in-out, visibility 0.5s ease-in-out;
   }
 }
 
