--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -21,11 +21,8 @@ details {
       width: 32px;
       height: 32px;
       cursor: pointer;
+      transform-origin: center;
       transition: transform 0.5s ease-in-out;
-    }
-
-    .arrow::before {
-      transform: rotate(-180deg);
     }
   }
 
@@ -37,18 +34,22 @@ details {
 div.collapse-text {
   width: auto;
   background: #f6f6f6;
-  // padding: 16px 20px 20px 20px;
   overflow: hidden;
   max-height: 0;
-  transition: max-height 0.5s ease-out;
+  transition: max-height 0.6s ease-in-out;
+
+  p {
+    color: #ff6060;
+    margin: 0;
+    padding: 20px 28px 20px 20px;
+  }
 }
 
-details[open] + div .collapse-text {
+details[open] + div.collapse-text {
   max-height: 800px;
-  transition: max-height 0.5s ease-out;
+  transition: max-height 0.6s ease-in-out;
 }
 
-details[open] .arrow::before {
+details[open] .arrow {
   transform: rotate(-180deg);
-  transition: rotate 0.5s ease-out;
 }
