--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -22,7 +22,7 @@ details {
       height: 32px;
       cursor: pointer;
       transform-origin: center;
-      transition: transform 0.5s ease-in-out;
+      transition: transform 0.6s ease-in-out;
     }
   }
 
@@ -34,6 +34,7 @@ details {
 div.collapse-text {
   width: auto;
   background: #f6f6f6;
+  border-radius: 5px;
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.6s ease-in-out;
@@ -42,6 +43,7 @@ div.collapse-text {
     color: #ff6060;
     margin: 0;
     padding: 20px 28px 20px 20px;
+    font-size: 18px;
   }
 }
 
