--- a/src/style/Apropos.scss
+++ b/src/style/Apropos.scss
@@ -31,6 +31,16 @@
     max-width: 1023px;
     gap: 30px;
     margin-bottom: 38px;
+
+    .text-element {
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .text-collapsible {
+      font-size: 18px;
+      font-weight: 400;
+    }
   }
 }
 
@@ -46,6 +56,16 @@
     .charte {
       gap: 20px;
       margin-bottom: 19px;
+
+      .text-element {
+        font-size: 13px;
+        font-weight: 500;
+      }
+
+      .text-collapsible {
+        font-size: 12px;
+        font-weight: 400;
+      }
     }
   }
 }
